--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,9 @@
 [submodule "src/libraries/googletest"]
 	path = src/libraries/googletest
 	url = https://github.com/inexor-game/googletest.git
+[submodule "src/libraries/cef3/libcef_dll"]
+	path = src/libraries/cef3/libcef_dll
+	url = https://github.com/inexor-game/libcef_dll.git
+[submodule "src/libraries/cef3/include"]
+	path = src/libraries/cef3/include
+	url = https://github.com/inexor-game/cef_include.git
